[gd_scene load_steps=10 format=3 uid="uid://dscqjf32hvyqp"]

[ext_resource type="Script" path="res://Unit/ranged_unit.gd" id="1_git8d"]
[ext_resource type="Texture2D" uid="uid://druk1kswiiwhb" path="res://Textures/placeholder_unit.png" id="2_qh8g4"]
[ext_resource type="Script" path="res://States/finite_state_machine.gd" id="3_h285r"]
[ext_resource type="Script" path="res://States/Unit/UnitAttacking.gd" id="4_hu53p"]
[ext_resource type="Script" path="res://States/Unit/UnitMoving.gd" id="5_vet65"]
[ext_resource type="Script" path="res://States/Unit/UnitDying.gd" id="6_b1cf3"]
[ext_resource type="Script" path="res://States/Unit/UnitShooting.gd" id="7_hkxxm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28tog"]
size = Vector2(35, 128)

[sub_resource type="CircleShape2D" id="CircleShape2D_lxjs4"]
radius = 600.0

[node name="Unit2Age1" type="CharacterBody2D"]
script = ExtResource("1_git8d")

[node name="UnitCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_28tog")

[node name="EnemyDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_lxjs4")

[node name="PlaceholderTexture" type="Sprite2D" parent="."]
texture = ExtResource("2_qh8g4")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -77.0
offset_right = 20.0
offset_bottom = -69.0
grow_horizontal = 2
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_h285r")
initial_state = NodePath("UnitMoving")

[node name="UnitAttacking" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("4_hu53p")
unit = NodePath("../..")

[node name="UnitMoving" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("5_vet65")
unit = NodePath("../..")

[node name="UnitDying" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("6_b1cf3")
unit = NodePath("../..")

[node name="UnitShooting" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("unit")]
script = ExtResource("7_hkxxm")
unit = NodePath("../..")

[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
